monticore-generator/src/test/resources/cocos/invalid/A2030/A2030c.mc4
package cocos.invalid.A2030;

grammar A2030c {

  abstract A implements B;

}